simplify classes with inspect code 3
redundant local variable
replace add() with bulk method call addAll()
transform manuel array copy to System.arraycopy()
simplify assert tests