@@ -2321,7 +2321,7 @@ public class ChatLounge extends AbstractPhaseDisplay implements
      * of the entities are not his own.
      */
     boolean canSee(Entity entity) {
-        return canSeeAll(Arrays.asList(entity));
+        return canSeeAll(List.of(entity));
     }
     
     boolean entityInLocalTeam(Entity entity) {
